<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:background="@drawable/background_img2"
    tools:context=".FriendRequestListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_friendRequestList"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/friendRequestList_title"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <ImageButton
            android:id="@+id/addFriend_friendRequestList"
            android:contentDescription="@string/add_friend_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            app:srcCompat="@drawable/ic_person_add_black_32dp" />

    </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/listView_friendRequestList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_friendRequestList" />

</android.support.constraint.ConstraintLayout>