<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/sidebar_main">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteY="25dp"
        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            mapbox:mapbox_cameraTargetLat="55.944"
            mapbox:mapbox_cameraTargetLng="-3.188396"
            mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
            mapbox:mapbox_cameraZoom="15">

        <ImageButton
            android:id="@+id/sidebar_map"
            android:contentDescription="@string/open_nav_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_list_black_50dp"/>

        </com.mapbox.mapboxsdk.maps.MapView>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navView_main"
        android:layout_gravity="start"
        android:background="#ebf4a8"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" />
    
</android.support.v4.widget.DrawerLayout>
