<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_sidebar"
        android:title="My Profile"
        android:icon="@drawable/ic_person_black_24dp">
    </item>
    <item
        android:id="@+id/wallet_sidebar"
        android:title="@string/wallet_title"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp">
    </item>
    <item
        android:id="@+id/bank_sidebar"
        android:title="@string/bank_title"
        android:icon="@drawable/ic_account_balance_black_24dp">
    </item>
    <item
        android:id="@+id/shop_sidebar"
        android:title="@string/shop_title"
        android:icon="@drawable/ic_store_mall_directory_black_24dp">
    </item>
    <item
        android:id="@+id/friendList_sidebar"
        android:title="@string/friendList_title"
        android:icon="@drawable/ic_people_outline_black_24dp">
    </item>
    <item
        android:id="@+id/friendRequestList_sidebar"
        android:title="@string/friendRequestList_title"
        android:icon="@drawable/ic_person_add_black_24dp">
    </item>
    <item
        android:id="@+id/signOut_sidebar"
        android:title="@string/signOut_title"
        android:icon="@drawable/ic_exit_to_app_black_24dp">
    </item>

</menu>