...
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:background="@drawable/my_button1"
            android:text="@string/create_account" />

        <TextView
            android:id="@+id/loginLink_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:background="#000000"
...
